--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,12 @@ collections:
       file: "data/about.yml"
       fields:
         - { label: "Main Content", name: "main_content", widget: "markdown" }
-        - { label: "Competitions", name: "competitions", widget: "markdown" }
+        - label: "Subteams"
+          name: "subteams"
+          widget: "list"
+          fields:
+            - {label: "Name", name: "title", widget: "string"}
+            - {label: "Description", name: "description", widget: "markdown"}
 - name: "posts" # Used in routes, e.g., /admin/collections/blog
   label: "Posts" # Used in the UI
   folder: "content/posts" # The path to the folder where the documents are stored
