Update About Page “about-data”

--- a/data/about.yml
+++ b/data/about.yml
@@ -63,6 +63,7 @@ subteams:
       strategy, and scouting process. In addition, this team leads, our efforts
       to earn awards at the competitions. This team is a potential fit for a
       wide range of skills.
+    image: /images/uploads/competitions.png
     title: Competitions
   - description: >-
       This team is responsible for designing AND building the electrical part of
