--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,7 +21,7 @@ collections:
             - {label: "Image", name: "image", widget: "image"}
 - name: "posts" # Used in routes, e.g., /admin/collections/blog
   label: "Posts" # Used in the UI
-  folder: "content/posts" # The path to the folder where the documents are stored
+  folder: "content/posts/2018" # The path to the folder where the documents are stored
   create: true # Allow users to create new documents in this collection
   slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
   fields: # The fields for each document, usually in front matter
