--- a/data/games.yml
+++ b/data/games.yml
@@ -7,7 +7,7 @@ games:
       robots can climb the tower to defeat the boss.
     align: right
     banners:
-      - Sundome
+      - text: Sundome
   - title: steamworks
     year: 2017
     description: >-
