--- a/data/home.yml
+++ b/data/home.yml
@@ -1,7 +1,28 @@
-header1:
-header2:
-secondary_header:
+header1: We Build More Than Robots
+header2: We Build Futures
+secondary_header: MENTORS AND PARENTS ARE NEEDED FOR TEAM GROWTH AND SUCCESS
 main_content: >-
-  main content
+  Through community outreach, partnerships, and recruitment our team 2811 inspires, transforms, and shapes the
+  world around us into a place where innovation, technology, and the sciences are celebrated. As a team we
+  cultivate an environment for growth that extends beyond our team, aiming to engage, inspire, and educate
+  both our team members and members of our community. Our motto, “We build more than robots we build futures,”
+  motivates each student and mentor to strive for a personal best every day. This helps our members develop
+  self-confidence, communication skills, as well as a passion for science and technology that will last
+  throughout their lifetime.
+
+  This is our vision, this is StormBots.
 secondary_content: >-
-  secondary content
+  None of what we do would be possible without our mentors and parent volunteers. Mentors give the gifts of
+  their time, life wisdom and professional experience all of which help us grow into mature,
+  responsible and caring adults ourselves. They all come from different career paths, not just engineering but
+  they all bring the same thing: knowledge critical to our team's functioning and our growth
+  as individuals. They teach us to program. They show us how to build robots. They show us by their example
+  how to plan, organize and lead a project. They give us help when we need it, but never
+  interfere or do things themselves. Without our mentors, this team wouldn't be able to work and do the things
+  it does. We thank all of our mentors and parent volunteers for the amazing gifts they
+  share with us!
+
+  What?!?!? You're not an engineer? NO PROBLEM!! An FRC team needs many different types of assistance, not
+  just technical stuff: we need mentors and parent volunteers who can help write a
+  business plan, design a web site, create a marketing campaign, and more! Please contact us at
+  info@stormbots.com for more information.
