--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -67,6 +67,8 @@ collections:
             - {label: "From", name: "from", widget: "string"}
             - {label: "URL", name: "url", widget: "string"}
             - {label: "Description", name: "desc", widget: "markdown"}
+            - {label: "Level", name: "level", widget: "select", options: ["hurricane", "torrent", "thunderstorm", "zephyr", "breeze"]}
+            - {label: "Logo", name: "logo", widget: "image"}
 - name: "posts" # Used in routes, e.g., /admin/collections/blog
   label: "Posts" # Used in the UI
   folder: "content/posts/2018" # The path to the folder where the documents are stored
