--- a/data/about.yml
+++ b/data/about.yml
@@ -1,32 +1,28 @@
 main_content: >-
   FRC Team 2811, the StormBots, is based out of Skyview High School in
   Vancouver, WA. Skyview also houses the Science, Mathematics, and Technology
-  (SMT) magnet of the Vancouver Public School District, and is a certified Project Lead the
-  Way: Pathway to Engineering school. Feel free to contact us at
-  info@stormbots.com to visit and learn more about our team, but be aware that
-  our schedule varies based on seasonal events. We don’t just cut metal and
-  connect wires, our team needs a wide variety of talent to design, build,
-  wire, program, finance, document, organize, transport, promote team spirit, and
-  advertise. We have organized ourselves into various groups, known as
-  subteams.
+  (SMT) magnet of the Vancouver Public School District, and is a certified
+  Project Lead the Way: Pathway to Engineering school. Feel free to contact us
+  at info@stormbots.com to visit and learn more about our team, but be aware
+  that our schedule varies based on seasonal events. We don’t just cut metal and
+  connect wires, our team needs a wide variety of talent to design, build, wire,
+  program, finance, document, organize, transport, promote team spirit, and
+  advertise. We have organized ourselves into various groups, known as subteams.
 
   A complete list of all the subteams and there descriptions can be seen below.
 
   This is a brief history of our team:
 
-  * We became a FIRST Robotics Competition team is 2008-2009, our rookie year. We
-  had just 12 students.
-  * In 2010, our team doubled in size to 24 students.
-  * In 2011, we grew to 34 students. We also competed in two regional
-  championships for the first time.
-  * In 2012, we grew to 40+ students, and got first place in the Girls
-  Generation competition.
-  * In 2013, we grew to 45+ students, and created our first climbing robot.
-  * In 2014, we won our first competition, at the Oregon State competition.
-  * In 2015, our team size remained around 45 students.
-  * In 2016, we grew to 50+ students, and won our second competition.
-  * In 2017, we created our first powdercoated robot.
-  * In 2018, we won 2 competitions, and qualified for Worlds for the first time.
+  * We became a FIRST Robotics Competition team is 2008-2009, our rookie year.
+  We had just 12 students. * In 2010, our team doubled in size to 24 students. *
+  In 2011, we grew to 34 students. We also competed in two regional
+  championships for the first time. * In 2012, we grew to 40+ students, and got
+  first place in the Girls Generation competition. * In 2013, we grew to 45+
+  students, and created our first climbing robot. * In 2014, we won our first
+  competition, at the Oregon State competition. * In 2015, our team size
+  remained around 45 students. * In 2016, we grew to 50+ students, and won our
+  second competition. * In 2017, we created our first powdercoated robot. * In
+  2018, we won 2 competitions, and qualified for Worlds for the first time.
 
   These are the seven main subteams that make up our team:
 subteams:
@@ -42,41 +38,40 @@ subteams:
       This team is responsible for designing AND building the electrical part of
       the robot, including the onboard computer, air systems, motor drivers, and
       wiring all this together.
-    title: Controls
     image: /images/uploads/controls.png
+    title: Controls
   - description: >-
       This team is responsible for designing and building the various parts of
       the robot that manipulate, shoot, or otherwise make things happen with
       game pieces. This team needs students who want to design using CAD and
       then use machine shop tools to create their designs.
-    title: Functions
     image: /images/uploads/functions.png
+    title: Functions
   - description: >-
       This team is responsible for designing AND building the base of our robot
       and the wheels and gears that make it go. This team needs students who
       want to design using CAD and then use machine shop tools to create their
       design.
-    title: frameworks
     image: /images/uploads/frameworks.png
+    title: Frameworks
   - description: >-
       This team is responsible for managing our team image and getting the word
       out about us though social and traditional media. It is an excellent fit
       for someone looking to learn or use their marketing and business skills in
       a real application.
-    title: Marketing
     image: /images/uploads/marketing.png
+    title: Foundations
   - description: >-
       This team is responsible for creating the programming code that makes the
       robot perform all the required functions. Students will learn and use
       programming skills and scientific analysis to determine the right
-      programming for the robot to perform autonomous and driver operated
-      tasks.
-    title: Programming
+      programming for the robot to perform autonomous and driver operated tasks.
     image: /images/uploads/programming.png
+    title: Programming
   - description: >-
       Our most unique team and a true competitive advantage versus all other
       robotics clubs. This team is responsible for leading our safety culture,
       building and mobilization of our competition "pit", and building field
       elements for robot practice.
-    title: Wingnuts
     image: /images/uploads/wingnuts.png
+    title: Wingnuts
