Update Partners “partners-data”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -1,8 +1,8 @@
 List:
   - desc: >-
       Electrical supply chain with a wide range of products including
-      generators, lighting, tools & fuses. Has supported the team from its
-      inception with donated materials and volunteer mentors.
+      generators, lighting, tools & fuses. Platt Electric has supported the team
+      from its inception with donated materials and volunteer mentors.
     from: 2008-2018
     level: hurricane
     location: 'Vancouver, WA'
