--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -10,11 +10,14 @@ List:
     name: Platt Electric Supply
     url: 'https://www.platt.com/'
   - desc: >-
-      Boeing is the world's largest aerospace company and leading manufacturer
+      > Boeing is the world's largest aerospace company and leading manufacturer
       of commercial jetliners and defense, space and security systems. A top
       U.S. exporter, the company supports airlines and U.S. and allied
-      government customers in 150 countries. Boeing has provided financial
-      support and volunteer mentors to the team since our team's inception.
+      government customers in 150 countries. 
+
+
+      Boeing has provided financial support and volunteer mentors to the team
+      since our team's inception.
     from: 2008-2018
     level: hurricane
     logo: /images/uploads/boeing-new.png
@@ -29,12 +32,19 @@ List:
       school students.
     from: 2008-2018
     level: hurricane
+    location: 'Olympia, WA'
     logo: /images/uploads/ospi.png
     name: Office of Superintendent of Public Instruction
     url: 'http://www.k12.wa.us/'
-  - desc: >
+  - desc: >-
+      > When you rely on your tractor trailer to earn a living, make sure you
+      protect your investment with the best equipment and accessories possible.
+      Each product ProTech builds is crafted to specifically fit your truck and
+      to be of the highest standard and quality possible.
+
+
       Protech offers us significant amounts of metal, which is used for building
-      our robot and components
+      our robot and components.
     from: 2013-2018
     level: hurricane
     logo: /images/uploads/pro-tech.png
