Update Partners “partners-data”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -37,7 +37,7 @@ List:
     name: Office of Superintendent of Public Instruction
     url: 'http://www.k12.wa.us/'
   - desc: >-
-      > When you rely on your tractor trailer to earn a living, make sure you
+      When you rely on your tractor trailer to earn a living, make sure you
       protect your investment with the best equipment and accessories possible.
       Each product ProTech builds is crafted to specifically fit your truck and
       to be of the highest standard and quality possible.
