Update Partners “partners-data”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -78,9 +78,10 @@ List:
     logo: /images/uploads/con-met.png
     name: Con-Met
     url: 'https://www.conmet.com/'
-  - desc: >
+  - desc: >-
       USNR is the world's largest, most comprehensive supplier of equipment and
-      technologies for the wood processing industry.
+      technologies for the wood processing industry. USNR shares its expertise
+      with the team through the volunteer mentors.
     from: 2014-2018
     level: thunderstorm
     location: 'Woodland, WA'
