Update Partners “partners-data”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -125,10 +125,10 @@ List:
     logo: /images/uploads/lanxess.png
     name: Lanxess
     url: 'https://lanxess.com/'
-  - desc: >
+  - desc: >-
       Hungry? So were we until Garlic Jim's stepped in. Now we can afford to eat
-      in our late night building sprees.
-    from: 2014-2018
+      in our late night and weekend building sprees.
+    from: 2010-2018
     level: zephyr
     location: 'Salmon Creek, WA'
     logo: /images/uploads/garlicjims.png
