more partner data, edit

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -1,3 +1,28 @@
+title: "Get Involved: Invest in the Future!"
+content: >-
+  ### The Problem
+  
+  La de da paragraph here
+
+  ### The Solution
+
+  La de da another paragraph here.
+Testimonials:
+  - name: John Doe
+    grade: 11
+    testimonial: This is an opinion and can be edited
+  - name: Jane Doe
+    grade: 12
+    testimonial: This is an opinion and can be edited
+Levels:
+  - name: hurricane
+    amount: 10
+  - name: zephyr
+    amount: 20
+  - name: torrent
+    amount: 30
+  - name: thunderstorm
+    amount: 40
 List:
   - desc: >-
       Electrical supply chain with a wide range of products including
