--- a/config.toml
+++ b/config.toml
@@ -40,6 +40,13 @@ publishDir = "public"
     name = "Partners"
     url = "/partners/"
     weight = 5
+    identifier = "partners"
+
+[[menu.main]]
+    name = "Get Involved"
+    url = "/get-involved"
+    weight = 1
+    parent = "partners"
 
 [[menu.main]]
     name = "Posts"
